# sanctum-terminal

./: .gitignore  .last_relic  FirstLight.py  LEGAL_RECORDS.md  MATHEMATICAL_FOUNDATION.md  Makefile  README.md  REFACTOR_PLAN.md  SimulationRunner.py  VISUAL_LANGUAGE.md  avatar.py  brain_server.py  cavern.py  cavern2.py  config_manager.py  conftest.py  creation_lab.py  daemon.py  debug_state.json  dungeon.py  engine.py  godot_export.py  ignite.sh  ingest_relics.py  input_handler.py  main.py  native_renderer.py  perception.py  pyproject.toml  relativity_engine.py  relic.py  renderer_bridge.py  renderer_handler.py  renderer_poc.py  room_lab.py  sanctum.py  scout.py  scout_check.py  seed_vault.py  sensors.py  (+9 more)
.trunk/: trunk.yaml
_legacy_archive/: config_manager.py  input_handler.py  sanctum.py  status.py
config/: ghost_profiles.json  lab_manifest.json  manifest.json  sanctum.toml  signal_map.json
core/: atlas.py  engine.py  geometry.py  input_handler.py  registry.py  session.py  spatial_utils.py  vault.py  viewport.py
data/: checkpoint.json  devlog.json  scout_report.json
deprecated/: atlas_logic.py  rosetta_stone.py  terminal_v1_legacy.py
engines/: world.py
exports/: ACT_Critter_Quad_V1.json  ACT_Critter_Tiny_V1.json  ACT_Human_Large_V1.json  ACT_Human_Stock_V1.json  ACT_Human_Thin_V1.json  ATM_Master_V1.json  GLO_Master_Town_V1.json  GLO_Meso_V1.json  GLO_Micro_V1.json  PAS_Flora_V1.json  PAS_Furniture_V1.json  TOOL_Aux_V1.json  TOOL_Major_V1.json  TOOL_Minor_V1.json  WEAR_Head_V1.json  WEAR_Limb_V1.json  WEAR_Torso_V1.json
godot/: ground.gdshader  ground.gdshader.uid  kind_config.json  kind_shader.gdshader  kind_shader.gdshader.uid  main.gd  main.gd.uid  main.tscn  noise_64.png.import  organic_64.png.import  outline_post.gdshader  outline_post.gdshader.uid  project.godot  stone_128.png.import  world_grain.png.import  world_grain_normal.png.import
infra/: loader.py
interfaces/: atlas_3d.py  panda_bridge.py  simulation_mock.py  terminal_2d.py  test_performance_floor.py
sanctum_terminal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: configmanager.py  daemon.py  engine.py  relic.py  (+4 more)
(+706 files in other folders)
