[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sanctum-terminal"
version = "0.1.0"
description = "Sovereign Reality Engine"
dependencies = [
    "rich",
    "requests",
    "pytest",
    "pygame",
    "moderngl",
    "pyrr",
    "numpy"
]

[project.scripts]
sanctum = "sanctum:main"

[tool.setuptools]
py-modules = ["sanctum", "config_manager", "engine", "scout", "sensors", "status", "viewport", "input_handler", "renderer_handler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# This tells pytest to stay out of the legacy/deprecated zones
norecursedirs = ["deprecated", "tests/deprecated", "tests/legacy_v1", ".venv", "systems"]
python_files = ["test_location.py", "test_viewport_modules.py", "test_world_regression.py"]