[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sanctum-terminal"
version = "0.1.0"
description = "Sovereign Reality Engine"
dependencies = [
    "rich",
    "requests",
    "pytest",
    "pygame",
    "moderngl",
    "pyrr",
    "numpy",
    "panda3d"  # <--- CRITICAL: Fixes the 'direct' module error
]

[project.scripts]
sanctum = "sanctum:main"

[tool.setuptools]
py-modules = ["sanctum", "config_manager", "engine", "scout", "sensors", "status", "viewport", "input_handler", "renderer_handler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["deprecated", "tests/deprecated", "tests/legacy_v1", ".venv", "systems"]
python_files = ["test_location.py", "test_viewport_modules.py", "test_world_regression.py"]

[tool.ruff]
# This tells Trunk/Ruff to ignore the Ursina legacy files
extend-exclude = ["deprecated/procedural_originals"]