[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sanctum-terminal"
version = "0.1.0"
dependencies = [
    "panda3d>=1.10.14",
    "rich>=13.0.0",
]

[tool.setuptools]
py-modules = ["main"]
packages = []

[project.scripts]
sanctum = "main:main"